# codekite

./: .clinerules  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  analyze_repo.py  kit_index.json  package-lock.json  pyproject.toml  repo_map.json  test.sh
docs/: astro.config.mjs  package-lock.json  package.json
examples/: README.md  analyze_repo.py  clone_and_analyze.py  example_kit_capabilities.py  example_llm_summarization.py  example_mcp_integration.py  example_remote_repo.py  example_repo_mapping.py  example_semantic_search.py  explore_client.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md  techContext.md
plans/: codemapper-integration.md  mcp-expansion-plan.md  rest-api-parity.md  source-reorganization.md  source_reorganization.md
scripts/: benchmark.py  index.py  release.sh  test.sh  typecheck.sh
src/kit/: cli.py  (+11 more)
tests/: golden_go.go  golden_hcl.tf  golden_python.py  golden_python_complex.py  golden_rust.rs  golden_typescript.ts  golden_typescript_complex.ts  test_code_searcher.py  test_context_assembler.py  test_context_assembler_limits.py  test_context_extractor.py  test_cross_file_impact.py  test_dependency_analyzer.py  test_docstring_incremental.py  test_docstring_indexer.py  test_golden_symbols.py  test_hcl_symbols.py  test_java_symbols.py  test_repo.py  test_repo_integration.py  test_repo_mapper.py  test_ruby_c_symbols.py  test_summaries.py  test_summarizer.py  test_symbol_extraction_multilang.py  test_tree_sitter_languages.py  test_typescript_symbol_extraction.py  test_vector_searcher.py
(+97 files in other folders)
