[project]
name = "codekite"
version = "0.1.7"
description = "A modular toolkit for LLM powered codebase understanding."
authors = [
    { name = "Shane Holloman", email = "shaneholloman@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "tree-sitter-language-pack>=0.7.2",
    "pathspec>=0.11.1",
    "pytest>=8.3.5",
    "numpy>=1.25",
    "chromadb>=0.5.25",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "typer>=0.9",
    "openai>=1.0.0",
    "tiktoken>=0.4.0",
    "anthropic>=0.20.0",
    "google-genai>=1.14.0",
    "mypy",
    "ruff",
    "black",
]

[project.urls]
Homepage = "https://github.com/shaneholloman/codekite"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true



[project.scripts]
codekite = "codekite.cli:app"
